; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/osk/extr_main.c_OSK_SetImage.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/osk/extr_main.c_OSK_SetImage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@Globals = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@IMAGE_ICON = common dso_local global i64 0, align 8
@LR_DEFAULTCOLOR = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@BM_SETIMAGE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OSK_SetImage(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 1), align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @MAKEINTRESOURCEW(i32 %9)
  %11 = load i64, i64* @IMAGE_ICON, align 8
  %12 = load i32, i32* @LR_DEFAULTCOLOR, align 4
  %13 = call i64 @LoadImageW(i32 %8, i32 %10, i64 %11, i32 16, i32 16, i32 %12)
  %14 = inttoptr i64 %13 to i32*
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* %3, align 4
  br label %38

19:                                               ; preds = %2
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 0), align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32* @GetDlgItem(i32 %20, i32 %21)
  store i32* %22, i32** %7, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %19
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @DestroyIcon(i32* %26)
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* %3, align 4
  br label %38

29:                                               ; preds = %19
  %30 = load i32*, i32** %7, align 8
  %31 = load i32, i32* @BM_SETIMAGE, align 4
  %32 = load i64, i64* @IMAGE_ICON, align 8
  %33 = trunc i64 %32 to i32
  %34 = load i32*, i32** %6, align 8
  %35 = ptrtoint i32* %34 to i32
  %36 = call i32 @SendMessageW(i32* %30, i32 %31, i32 %33, i32 %35)
  %37 = load i32, i32* @TRUE, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %29, %25, %17
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i64 @LoadImageW(i32, i32, i64, i32, i32, i32) #1

declare dso_local i32 @MAKEINTRESOURCEW(i32) #1

declare dso_local i32* @GetDlgItem(i32, i32) #1

declare dso_local i32 @DestroyIcon(i32*) #1

declare dso_local i32 @SendMessageW(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
